<?xml version="1.0"?>
<package format="2">
    <name>robot_control_center</name>
    <version>0.0.0</version>
    <description>The robot_control_center package</description>
    <maintainer email="support@jtcx.cn">jtcx</maintainer>
    <license>private</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>roslib</depend>

    <export>
    </export>

</package>