<?xml version="1.0"?>
<package format="2">
    <name>robot_description</name>
    <version>1.0.0</version>
    <description>The robot_description package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="hitlx916@stu.hit.edu.cn">liuxiao</maintainer>
    <maintainer email="gy_rick@foxmail.com">liuxiao</maintainer>
    <maintainer email="21S153111@stu.hit.edu.cn">liuxiao</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->''
        <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>gazebo_ros_control</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>gazebo_dev</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>rospy</build_depend>
    
    <exec_depend>gazebo_dev</exec_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>

    <build_export_depend>gazebo_plugins</build_export_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <build_export_depend>gazebo_ros_control</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
    <build_export_depend>xacro</build_export_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>message_runtime</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
